--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,6 +15,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Install system dependencies for Pillow
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libjpeg-dev zlib1g-dev libfreetype6-dev liblcms2-dev libwebp-dev
     
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
