--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -75,6 +75,9 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install black isort pylint mypy
+
+    - name: Install local modules
+      run: pip install -e .
         
     - name: Make test script executable
       run: chmod +x ./test.sh
