ignoring false positives

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,12 @@
+[FORMAT]
+max-line-length=88
+
 [MASTER]
 ignore=venv,__pycache__,.git
 ignore-patterns=^\\.#
 
-[FORMAT]
-max-line-length=88
+[MESSAGES CONTROL]
+disable=redefined-outer-name
+
+[TYPECHECK]
+ignored-modules=pytest
