- added swagger doc api - added raw api namespace for future extensibility - moved index rendering to web namespace - added classes and models from config file

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,14 @@ warn_unused_configs = True
 disallow_untyped_defs = False
 disallow_incomplete_defs = False
 
+[mypy.plugins.flask_restx.*]
+ignore_missing_imports = True
+
 [mypy.plugins.flask.*]
+ignore_missing_imports = True
+
+# You can also add specific ignores for packages
+[mypy-flask_restx.*]
 ignore_missing_imports = True
 
 [mypy.plugins.pytest.*]
