--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flake8-bugbear>=23.3.23
 flake8-docstrings>=1.7.0
 flake8>=6.0.0
 Flask>=2.0.3,<3.0.0
+flask-restx>=1.1.0
 idna>=3.4
 immunipy>=0.1.0
 isort>=5.12.0
